Altered index.html - added overlay image to handle crossfade. Altered main.js - added change image function which incorporates a fade function to nicely crossfade between images as well as sets all the attributes for each element thus reducing the total code required by each function.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div class="container">
 <div class="img-zoom-container col-xs-12" data-lrgwidth="4250" data-lrgheight="1560" >
   <div class="show" href="images/IMG_0001.jpg" data-hres="images/hres/IMG_0001.jpg">
+	<img src="images/IMG_0001.jpg" id="show-img-crossfade" style="display:none;position:absolute;top:0;left:0;right:0;bottom:0;">
     <img src="images/IMG_0001.jpg" id="show-img">
 	<div class="img-zoom-cover"></div>
 	<a class="visible-xs visible-sm" id="img-zoom-mobileView" onclick="mobileZoom();" style="position:absolute;top:0;bottom:0;left:0;right:0;z-index:10;"></a>
