renamed main.js to zoom-image-main.js to make it unique and easier to identify in a solution. Updated references in readme and index file. Replaced images with low res counterparts to enable people to see the difference between carousel and zoom.

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 </div>
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/zoom-image.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/zoom-image-main.js"></script>
 </body>
 </html>
