--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8"/>
   <title></title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> <!-- Bootstrap 3.4.1 CDN -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/image-zoom-main.css">
   
 </head>
 <body>
 <div class="container">
 <div class="img-zoom-container col-xs-12" data-lrgwidth="4250" data-lrgheight="1560" >
-  <div class="show" href="images/IMG_0001.jpg" data-hres="images/hres/IMG_0001.jpg">
-	<img src="images/IMG_0001.jpg" id="show-img-crossfade" style="display:none;position:absolute;top:0;left:0;right:0;bottom:0;">
-    <img src="images/IMG_0001.jpg" id="show-img">
+  <div class="show">
+	<img src="" id="show-img-crossfade" style="display:none;position:absolute;top:0;left:0;right:0;bottom:0;">
+    <img src="" id="show-img">
 	<div class="img-zoom-cover"></div>
 	<a class="visible-xs visible-sm" id="img-zoom-mobileView" onclick="mobileZoom();" style="position:absolute;top:0;bottom:0;left:0;right:0;z-index:10;"></a>
   </div>
@@ -33,7 +33,7 @@
 <div id="img-zoom-mobileViewer">
 	<p style="font-size: 3em;height:5vh;">Press and drag to move</p>
 	<div class="img-zoom-mobileViewContainer">
-		<img id="img-zoom-mobileViewImg" src="images/hres/IMG_0001.jpg"/>
+		<img id="img-zoom-mobileViewImg" src=""/>
 	</div>
 	<a style="font-size: 3em;" onclick="mobileZoomClose();" id="img-zoom-mobileViewerClose">Close</a>
 </div>
